------------------------
/Users/ilja.petrovs/Downloads/puml.png

@startuml
title Relationships - Class Diagram

left to right direction
class Customer {
    int money
    hireScooter()
    dockScooter()
    useScooter()
}
class ChargingStation {
    int costToHire
    chargeScooter()
    releaseScooter()
    lockScooter()
}
class Battery {
    bool isDepleted
    int chargePower
    int speedOfDepletion
    depleteCharge()
}
class Scooter {
    int speed
    String name
    String model
    Battery battery
    goForward()
    stop()
}
class ScooterHireSystem {
    Array<Scooter> availableScooters    
    checkForScooter()
    getAllScooters()

}

Scooter ||--|| Battery: Runs on
Customer ||--|| Scooter: Hires and rides
Customer ||--|| ChargingStation: Returns scooter to
ChargingStation  ||--|{ Scooter: Charges
ScooterHireSystem  ||--|| ChargingStation: Manages
ScooterHireSystem ||--|{ Scooter: Manages

@enduml

PlantUML version 1.2020.27beta8(Unknown compile time)
(GPL source distribution)
Java Runtime: Java(TM) SE Runtime Environment
JVM: Java HotSpot(TM) 64-Bit Server VM
Default Encoding: UTF-8
Language: en
Country: US

------------------------
